--- a/ghostv.html
+++ b/ghostv.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="css/style.css"/>
-  <script defer src="js/app.js"></script>
-  <script defer src="js/reset.js"></script>
+<script defer src="app.js"></script>
+<script defer src="reset.js"></script>
   <title>GhostV Diario</title>
 </head>
 <body>
