--- a/ghostv.html
+++ b/ghostv.html
@@ -1,42 +1,36 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="css/style.css"/>
-  <title>GhostV Diario</title>
-</head>
-<body>
-  <div class="container">
-    <h1>GhostV Diario</h1>
-    <p class="welcome">Bienvenida de vuelta, Golden Girl. El silencio te esperaba.</p>
-    <textarea id="entry" placeholder="Escribe aquí..."></textarea>
-    <button onclick="saveEntry()">Guardar entrada</button>
-    <div id="entries"></div>
-    <button onclick="resetEntries()">🧨 Borrar todo</button>
-    <button onclick="toggleManifest()">🕯️ Ver manifiesto</button>
-  </div>
+<!-- Botón para alternar idioma -->
+<button id="langToggleBtn">🌐 English version</button>
 
-  <!-- Modal -->
-  <div id="manifestModal" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="toggleManifest()">&times;</span>
-      <h2>El derecho al silencio</h2>
-      <p>GhostV no es una app.<br>
-      Es un refugio para tu mente.<br>
-      Aquí nadie te observa, nadie te analiza, nadie te convierte en producto.<br><br>
-      No hay cuentas, no hay nube, no hay rastro.<br>
-      Solo tú y lo que piensas.<br><br>
-      Tu mente merece un espacio sin algoritmos.<br>
-      Donde escribir sea un acto íntimo.<br>
-      Donde el silencio sea protección, no castigo.<br><br>
-      <strong>GhostV existe porque pensar debe seguir siendo privado.</strong></p>
-    </div>
-  </div>
+<!-- Manifiesto en español -->
+<div id="manifesto-es" style="display: block; margin-top: 20px;">
+  <h2>El derecho al silencio</h2>
+  <p>GhostV no es una app.<br>
+  Es un refugio para tu mente.<br>
+  Aquí nadie te observa, nadie te analiza, nadie te convierte en producto.</p>
 
-  <script defer src="js/app.js"></script>
-  <script defer src="js/reset.js"></script>
-  <script defer src="js/modal.js"></script>
-</body>
-</html>
+  <p>No hay cuentas, no hay nube, no hay rastro.<br>
+  Solo tú y lo que piensas.</p>
 
+  <p>Tu mente merece un espacio sin algoritmos.<br>
+  Donde escribir sea un acto íntimo.<br>
+  Donde el silencio sea protección, no castigo.</p>
+
+  <p><strong>GhostV existe porque pensar debe seguir siendo privado.</strong></p>
+</div>
+
+<!-- Manifiesto en inglés -->
+<div id="manifesto-en" style="display: none; margin-top: 20px;">
+  <h2>The Right to Silence</h2>
+  <p>GhostV is not an app.<br>
+  It’s a refuge for your mind.<br>
+  Here, no one watches you, no one analyzes you, no one turns you into a product.</p>
+
+  <p>There are no accounts, no cloud, no trace.<br>
+  Only you and your thoughts.</p>
+
+  <p>Your mind deserves a space without algorithms.<br>
+  Where writing is an intimate act.<br>
+  Where silence means protection, not punishment.</p>
+
+  <p><strong>GhostV exists because thinking should remain private.</strong></p>
+</div>
