--- a/ghostv.html
+++ b/ghostv.html
@@ -1,5 +1,7 @@
 <!-- Botón para alternar idioma -->
 <button id="langToggleBtn">🌐 English version</button>
+<img src="assets/ghostv_logo.svg" alt="GhostV logo" style="width: 120px; margin-bottom: 1rem;">
+
 
 <!-- Manifiesto en español -->
 <div id="manifesto-es" style="display: block; margin-top: 20px;">
